--- a/locate-test.html
+++ b/locate-test.html
@@ -964,7 +964,7 @@
                 'mobara': { lat: 35.4268, lng: 140.3041 },
                 'yatsumi': { lat: 35.4039, lng: 140.3455 },
                 'kazusaichinomiya': { lat: 35.3747, lng: 140.3655 },
-                'torami': { lat: 35.3468, lng: 140. 3766 },
+                'torami': { lat: 35.3468, lng: 140.3766 },
                 'taito': { lat: 35.3200, lng: 140.3812 },
                 'chojamachi': { lat: 35.2961, lng: 140.3848 },
                 'mikado': { lat: 35.2830, lng: 140.3914 },
