--- a/locate-test.html
+++ b/locate-test.html
@@ -489,7 +489,7 @@
                 <summary>メニューを開く</summary>
               <div class="stationes">
                 <div class="awakamogawa"><input type="radio" id="awakamogawa_1" name="awakamogawa" value="1" class="forms mains"  data-timelines="2008-11-21:_o,2025-12-15:" /><label for="awakamogawa_1">(1)</label></div>
-                <div class="awakamogawa"><input type="radio" id="awakamogawa_2_3" name="awakamogawa" value="2" class="forms" data-timelines="2008-11-21:_o,2025-12-15:" />
+                <div class="awakamogawa"><input type="radio" id="awakamogawa_2" name="awakamogawa" value="2" class="forms" data-timelines="2008-11-21:_o,2025-12-15:" />
                     <select onchange="syncRadioId(this)">
                         <option value="awakamogawa_2">(2)</option>
                         <option value="awakamogawa_3">(3)</option>
@@ -523,13 +523,13 @@
                 <div class="ubara"><h3>鵜原駅</h3></div>
               </div>
               <div class="stationes">
-                <div class="katsuura"><input type="radio" id="katsuura_3" name="katsuura" value="1" class="forms mains" data-timelines="2009-02-27:_o,2025-11-18:" /><label for="katsuura_3">(3)</label></div>
-                <div class="katsuura"><input type="radio" id="katsuura_1_2" name="katsuura" value="2" class="forms" data-timelines="2009-02-27:_o,2025-11-18:" />
+                <div class="katsuura"><input type="radio" id="katsuura_1" name="katsuura" value="2" class="forms" data-timelines="2009-02-27:_o,2025-11-18:" />
                     <select onchange="syncRadioId(this)">
                         <option value="katsuura_1">(1)</option>
                         <option value="katsuura_2">(2)</option>
                     </select>
                 </div>
+                <div class="katsuura"><input type="radio" id="katsuura_3" name="katsuura" value="1" class="forms mains" data-timelines="2009-02-27:_o,2025-11-18:" /><label for="katsuura_3">(3)</label></div>
                 <div class="katsuura"><h3>勝浦駅</h3></div>
               </div>
               <div class="stationes">
@@ -699,7 +699,7 @@
               </div>
               <div class="stationes">
                 <div class="kazusaichinomiya"><input type="radio" id="kazusaichinomiya_1" name="kazusaichinomiya" value="1" class="forms mains" data-timelines="1990-01-01:_o2,2013-03-17:_o1,2025-10-22:" /><label for="kazusaichinomiya_1">(1)</label></div>
-                <div class="kazusaichinomiya"><input type="radio" id="kazusaichinomiya_2_3" name="kazusaichinomiya" value="2" class="forms" data-timelines="1990-01-01:_o2,2013-03-17:_o1,2025-10-22:" />
+                <div class="kazusaichinomiya"><input type="radio" id="kazusaichinomiya_2" name="kazusaichinomiya" value="2" class="forms" data-timelines="1990-01-01:_o2,2013-03-17:_o1,2025-10-22:" />
                     <select onchange="syncRadioId(this)">
                         <option value="kazusaichinomiya_2">(2)</option>
                         <option value="kazusaichinomiya_3">(3)</option>
@@ -743,13 +743,13 @@
                 <div class="onjuku"><h3>御宿駅</h3></div>
               </div>
               <div class="stationes">
-                <div class="katsuura"><input type="radio" id="katsuura_2" name="katsuura" value="2" class="forms mains" data-timelines="2009-02-27:_o,2025-11-18:" /><label for="katsuura_2">(2)</label></div>
-                <div class="katsuura"><input type="radio" id="katsuura_1_3" name="katsuura" value="2" class="forms" data-timelines="2009-02-27:_o,2025-11-18:" />
+                <div class="katsuura"><input type="radio" id="katsuura_1" name="katsuura" value="2" class="forms" data-timelines="2009-02-27:_o,2025-11-18:" />
                     <select onchange="syncRadioId(this)">
                         <option value="katsuura_1">(1)</option>
                         <option value="katsuura_3">(3)</option>
                     </select>
                 </div>
+                <div class="katsuura"><input type="radio" id="katsuura_2" name="katsuura" value="2" class="forms mains" data-timelines="2009-02-27:_o,2025-11-18:" /><label for="katsuura_2">(2)</label></div>
                 <div class="katsuura"><h3>勝浦駅</h3></div>
               </div>
               <div class="stationes">
@@ -779,7 +779,7 @@
               </div>
               <div class="stationes">
                 <div class="awakamogawa"><input type="radio" id="awakamogawa_1" name="awakamogawa" style="visibility: hidden;" value="1" class="forms" data-timelines="2008-11-21:_o,2025-12-15:" /><label for="awakamogawa_1">(1)</label></div>
-                <div class="awakamogawa"><input type="radio" id="awakamogawa_2_3" name="awakamogawa" style="visibility: hidden;" value="2" class="forms" data-timelines="2008-11-21:_o,2025-12-15:" />
+                <div class="awakamogawa"><input type="radio" id="awakamogawa_2" name="awakamogawa" style="visibility: hidden;" value="2" class="forms" data-timelines="2008-11-21:_o,2025-12-15:" />
                     <select onchange="syncRadioId(this)">
                         <option value="awakamogawa_2">(2)</option>
                         <option value="awakamogawa_3">(3)</option>
