--- a/platform/honchiba_1.html
+++ b/platform/honchiba_1.html
@@ -176,8 +176,12 @@
           <p>収録駅:本千葉駅1番線</p>
           <p>スピーカー:JVC横長型・小丸VOSS</p>
         
-          <label><input type="checkbox" id="buttonon">ボタン音オフ</label>
         </div>
+        <label  style="margin-left: 20px;"><input type="checkbox" id="buttonon">ボタン音オフ</label>
+        <select name="change" id="change" onchange="location.href=value;">
+          <option value="honchiba_1.html">JRE-IKST-027-02(首都圏33番)</option>
+          <option value="honchiba_1_o.html">ベル</option>
+        </select>
       </div>
           <script>
       const audio = document.getElementById("melody");
