--- a/platform/honchiba_2_o.html
+++ b/platform/honchiba_2_o.html
@@ -179,7 +179,7 @@
         </div>
         <label  style="margin-left: 20px;"><input type="checkbox" id="buttonon">ボタン音オフ</label>
         <select name="change" id="change" onchange="location.href=value;">
-          <option value="honchiba_2_o2.html">ベル</option>
+          <option value="honchiba_2_o.html">ベル</option>
           <option value="honchiba_2.html">JRE-IKST-027-01(首都圏33-1番)</option>
         </select>
       </div>
