--- a/platform/takasaki_13.html
+++ b/platform/takasaki_13.html
@@ -4,17 +4,17 @@
   <meta charset="utf-8" />
   <meta name="robots" content="index, follow">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="高崎駅13番線の発車メロディ「さらば青春の光」の再現ができます！">
+  <meta name="description" content="高崎駅13番線の発車メロディ「Great Messenger」の再現ができます！">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="icon" href="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/e233yo.png" />
   <link rel="stylesheet" href="takasaki_13.css">
   <meta property="og:image" content="https://cdn.glitch.global/f6b8403f-df22-44d1-8c21-1151b6811bd0/tv_onsei.png?v=1743405036680">
-  <meta property="og:description" content="高崎駅13番線の発車メロディ「さらば青春の光」の再現ができます！">
-  <meta property="og:title" content="高崎駅13番線「さらば青春の光」｜どこでもステーションベル">
+  <meta property="og:description" content="高崎駅13番線の発車メロディ「Great Messenger」の再現ができます！">
+  <meta property="og:title" content="高崎駅13番線「Great Messenger」｜どこでもステーションベル">
   <meta property="og:url" content="https://ssmn93.github.io/depart-melody">
   <meta name="twitter:card" content="summary_large_image">
-  <meta property="og:site_name" content="高崎駅13番線「さらば青春の光」｜どこでもステーションベル">
-  <title>高崎駅13番線「さらば青春の光」｜どこでもステーションベル</title>
+  <meta property="og:site_name" content="高崎駅13番線「Great Messenger」｜どこでもステーションベル">
+  <title>高崎駅13番線「Great Messenger」｜どこでもステーションベル</title>
 </head>
 <body>
   <header>
@@ -165,14 +165,14 @@
         <rect class="button" id="offButton" x="432" y="445" width="100" height="100" fill="#e06666" stroke="#e06666" stroke-width="2"/>
         <text class="button" id="offText" x="440" y="515" font-size="50" fill="white">OFF</text>
         </svg>
-    <audio id="melody" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/%E3%81%95%E3%82%89%E3%81%B0%E9%9D%92%E6%98%A5%E3%81%AE%E5%85%89.mp3"></audio>
+    <audio id="melody" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/Great%20Messenger.mp3"></audio>
     <audio id="hassha" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/%E7%99%BA%E8%BB%8A%E6%94%BE%E9%80%81_%E9%AB%98%E5%B4%8E13%E7%95%AA.mp3"></audio>
     <audio id="button" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/button.mp3"></audio>
       
     </div>
       <div class="arrange">
         <div class="content">
-          <h1>高崎駅 13番線「さらば青春の光」</h1>
+          <h1>高崎駅 13番線「Great Messenger」</h1>
           <p>収録駅:高崎駅13番線</p>
           <p>スピーカー:ユニペックス小丸型・天井型</p>
         
