--- a/platform/makuhari_2.html
+++ b/platform/makuhari_2.html
@@ -4,17 +4,17 @@
   <meta charset="utf-8" />
   <meta name="robots" content="index, follow">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="幕張駅2番線(旧)の発車メロディ「朝のドヴィッシー」の再現ができます！">
+  <meta name="description" content="幕張駅2番線の発車メロディ「JRE-IKST-003-06(首都圏10-2番)」の再現ができます！">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="icon" href="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/e233yo.png" />
   <link rel="stylesheet" href="makuhari_2.css">
   <meta property="og:image" content="https://cdn.glitch.global/f6b8403f-df22-44d1-8c21-1151b6811bd0/tv_onsei.png?v=1743405036680">
-  <meta property="og:description" content="幕張駅2番線(旧)の発車メロディ「朝のドヴィッシー」の再現ができます！">
-  <meta property="og:title" content="幕張駅2番線(旧)「朝のドヴィッシー」｜どこでもステーションベル">
+  <meta property="og:description" content="幕張駅2番線の発車メロディ「JRE-IKST-003-06(首都圏10-2番)」の再現ができます！">
+  <meta property="og:title" content="幕張駅2番線「JRE-IKST-003-06(首都圏10-2番)」｜どこでもステーションベル">
   <meta property="og:url" content="https://ssmn93.github.io/depart-melody">
   <meta name="twitter:card" content="summary_large_image">
-  <meta property="og:site_name" content="幕張駅2番線(旧)「朝のドヴィッシー」｜どこでもステーションベル">
-  <title>幕張駅2番線(旧)「朝のドヴィッシー」｜どこでもステーションベル</title>
+  <meta property="og:site_name" content="幕張駅2番線「JRE-IKST-003-06(首都圏10-2番)」｜どこでもステーションベル">
+  <title>幕張駅2番線「JRE-IKST-003-06(首都圏10-2番)」｜どこでもステーションベル</title>
 </head>
 <body>
   <header>
@@ -165,19 +165,23 @@
         <rect class="button" id="offButton" x="432" y="445" width="100" height="100" fill="#e06666" stroke="#e06666" stroke-width="2"/>
         <text class="button" id="offText" x="440" y="515" font-size="50" fill="white">OFF</text>
         </svg>
-    <audio id="melody" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/%E6%9C%9D%E3%81%AE%E3%83%89%E3%83%B4%E3%82%A3%E3%83%83%E3%82%B7%E3%83%BC.mp3"></audio>
+    <audio id="melody" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/%E9%A6%96%E9%83%BD%E5%9C%8F10-2%E7%95%AA.mp3"></audio>
     <audio id="tojime" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/%E6%88%B8%E9%96%89%E6%94%BE%E9%80%81_%E7%94%B7%E5%A3%B02%E7%95%AA%E3%80%8C%E3%81%AE%E3%80%8D%E8%8B%B1%E8%AA%9E.mp3"></audio>
     <audio id="button" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/button.mp3"></audio>
       
     </div>
       <div class="arrange">
         <div class="content">
-          <h1>幕張駅 2番線(旧)「朝のドヴィッシー」</h1>
+          <h1>幕張駅 2番線「JRE-IKST-003-06(首都圏10-2番)」</h1>
           <p>収録駅:幕張駅2番線</p>
           <p>スピーカー:小丸VOSS</p>
         
-          <label><input type="checkbox" id="buttonon">ボタン音オフ</label>
         </div>
+        <label  style="margin-left: 20px;"><input type="checkbox" id="buttonon">ボタン音オフ</label>
+        <select name="change" id="change" onchange="location.href=value;">
+          <option value="makuhari_2.html">JRE-IKST-003-06(首都圏10-2番)</option>
+          <option value="makuhari_2_o.html">朝のドヴィッシー</option>
+        </select>
       </div>
           <script>
       const audio = document.getElementById("melody");
