--- a/station/makuhari.html
+++ b/station/makuhari.html
@@ -50,7 +50,7 @@
           <img src="https://static.wixstatic.com/media/0acb38_786bad6de6bf454cae647a8f99ee2478~mv2.png/v1/fill/w_451,h_542,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_786bad6de6bf454cae647a8f99ee2478~mv2.png" alt="幕張駅">
           <div class="platform">
             <h2>2番線 -中央総武線西行</h2>
-            <p>JRE-IKST-003-06(首都圏10-2番) 〈変更前〉</p>
+            <p>JRE-IKST-003-06(首都圏10-2番)</p>
           </div>
           <a href="../platform/makuhari_2.html"></a>
         </div>
@@ -58,9 +58,9 @@
           <img src="https://static.wixstatic.com/media/0acb38_786bad6de6bf454cae647a8f99ee2478~mv2.png/v1/fill/w_451,h_542,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_786bad6de6bf454cae647a8f99ee2478~mv2.png" alt="幕張駅">
           <div class="platform">
             <h2>3番線 -中央総武線東行</h2>
-            <p>JRE-IKST-003-05(首都圏10-3番) 【未収録】</p>
+            <p>JRE-IKST-003-05(首都圏10-3番)</p>
           </div>
-<!--           <a href="../platform/makuhari_3.html"></a> -->
+          <a href="../platform/makuhari_3.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_786bad6de6bf454cae647a8f99ee2478~mv2.png/v1/fill/w_451,h_542,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_786bad6de6bf454cae647a8f99ee2478~mv2.png" alt="幕張駅">
