--- a/line/takasaki.html
+++ b/line/takasaki.html
@@ -130,8 +130,8 @@
         </div>
         <div class="column">
 <!--           <img src="https://static.wixstatic.com/media/0acb38_525e0b3f209542c1abc1ff962c89cbde~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_525e0b3f209542c1abc1ff962c89cbde~mv2.png" alt="立川駅"> -->
-          <p>高崎駅 【未収録】</p>
-<!--           <a href="../station/takasaki.html"></a> -->
+          <p>高崎駅</p>
+          <a href="../station/takasaki.html"></a>
         </div>
       </div>
   </div>
