--- a/line/ryomo.html
+++ b/line/ryomo.html
@@ -40,8 +40,8 @@
       <div class="container">
         <div class="column">
 <!--           <img src="https://static.wixstatic.com/media/0acb38_bae0139b66e64e62ba75e0fef7c00898~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_bae0139b66e64e62ba75e0fef7c00898~mv2.png" alt="東京駅"> -->
-          <p>高崎駅 【未収録】</p>
-<!--           <a href="../station/takasaki.html"></a> -->
+          <p>高崎駅</p>
+          <a href="../station/takasaki.html"></a>
         </div>
         <div class="column">
 <!--           <img src="https://static.wixstatic.com/media/0acb38_a4cae1976a254ee2a05fad93114663dc~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_a4cae1976a254ee2a05fad93114663dc~mv2.png" alt="神田駅"> -->
