--- a/line/hokuriku_shinkansen.html
+++ b/line/hokuriku_shinkansen.html
@@ -65,8 +65,8 @@
         </div>
         <div class="column">
 <!--           <img src="https://static.wixstatic.com/media/0acb38_70903573ec5e4f03855c9661d5aedb16~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_70903573ec5e4f03855c9661d5aedb16~mv2.png" alt="中野駅"> -->
-          <p>高崎駅 【未収録】</p>
-<!--           <a href="../station/takasaki.html"></a> -->
+          <p>高崎駅</p>
+          <a href="../station/takasaki.html"></a>
         </div>
         <div class="column">
 <!--           <img src="https://static.wixstatic.com/media/0acb38_97d1b29d3b9c43e791970d69ff64d64d~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_97d1b29d3b9c43e791970d69ff64d64d~mv2.png" alt="高円寺駅"> -->
