--- a/index.html
+++ b/index.html
@@ -97,13 +97,17 @@
       </div>
 
       <script>
-        const messages = [
+        const messages = [,
           {
-            text: "【お知らせ】2026.1.13 旧実行環境「Glitch」にて登録したファイルが削除されたため、一部ページのデザインに不具合が生じております。ボタン押下音・検索ボタンの復旧は本日時点で完了し、残る各路線イメージ画像・各駅駅名標についてはページ追加の合間を見て行ってまいります。",
+            text: "【ページ追加】2026.1.15 中央総武線 幕張駅 #2･#3･#3(旧)・北陸新幹線等 高崎駅･#12~#14",
             url: null
           },
           {
-            text: "【ページ追加】2026.1.13 相模線・同線等 橋本駅･#1~#5・京急空港線等 羽田空港第3ターミナル駅 #1(R.Y.U.S.E.I)･#1(Dragon Night)･#2(Dragon Night)",
+            text: "【機能追加】2026.1.14 ここからステーションベル 新路線追加：外房線",
+            url: "https://ssmn93.github.io/depart-melody/locate.html"
+          },
+          {
+            text: "【お知らせ】2026.1.13 旧実行環境「Glitch」にて登録したファイルが削除されたため、一部ページのデザインに不具合が生じております。ボタン押下音・検索ボタンの復旧は本日時点で完了し、残る各路線イメージ画像・各駅駅名標についてはページ追加の合間を見て行ってまいります。",
             url: null
           },
           {
@@ -113,10 +117,6 @@
           {
             text: "【機能追加】2026.1.1 トップページBGM変更：2026年1月限定曲「首都圏22番 アレンジver」",
             url: null
-          },
-          {
-            text: "【機能追加】2025.12.25 ここからステーションベル 新路線追加：我孫子支線",
-            url: "https://ssmn93.github.io/depart-melody/locate.html"
           },
         ];
 
