--- a/thanks.html
+++ b/thanks.html
@@ -1721,6 +1721,30 @@
             <td>Dragon Night verB</td>
             <td><a href="https://x.com/i/user/1426497394565292032">鉄道チャンネル様</a></td>
           </tr>
+          <tr>
+            <td>首都圏10-2番</td>
+            <td><a href="https://x.com/i/user/1528965644452253696">中田葦様</a></td>
+          </tr>
+          <tr>
+            <td>首都圏10-3番</td>
+            <td><a href="https://x.com/i/user/1528965644452253696">中田葦様</a></td>
+          </tr>
+          <tr>
+            <td>ジュピターE</td>
+            <td><a href="https://x.com/i/user/1528965644452253696">中田葦様</a></td>
+          </tr>
+          <tr>
+            <td>さらば青春の光</td>
+            <td><a href="https://www.youtube.com/@iden_189">I電様</a></td>
+          </tr>
+          <tr>
+            <td>Great Messenger</td>
+            <td><a href="https://www.youtube.com/@iden_189">I電様</a></td>
+          </tr>
+          <tr>
+            <td>高崎#14 発車放送</td>
+            <td><a href="https://x.com/i/user/1542014017010794498">しゃけ様</a></td>
+          </tr>
         </tbody>
       </table>
     </div>
