--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       </div>
 
       <script>
-        const messages = [,
+        const messages = [
           {
             text: "【ページ追加】2026.1.15 中央総武線 幕張駅 #2･#3･#3(旧)・北陸新幹線等 高崎駅･#12~#14",
             url: null
