--- a/station/musashikosugi.html
+++ b/station/musashikosugi.html
@@ -58,17 +58,17 @@
           <img src="https://static.wixstatic.com/media/0acb38_d87ef4acfb6748ecaee09faafbea237b~mv2.png/v1/fill/w_520,h_625,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_d87ef4acfb6748ecaee09faafbea237b~mv2.png" alt="武蔵小杉駅">
           <div class="platform">
             <h2>3番線 -横須賀線・相鉄線直通下り</h2>
-            <p>JRE-IKST-015-01(首都圏4番) 【未収録】</p>
+            <p>JRE-IKST-015-01(首都圏4番)</p>
           </div>
-<!--           <a href="../platform/kawasaki_3.html"></a> -->
+          <a href="../platform/musashikosugi_3.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_d87ef4acfb6748ecaee09faafbea237b~mv2.png/v1/fill/w_520,h_625,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_d87ef4acfb6748ecaee09faafbea237b~mv2.png" alt="武蔵小杉駅">
           <div class="platform">
             <h2>4番線 -横須賀線上り</h2>
-            <p>JRE-IKST-015-02(首都圏4-1番) 【未収録】</p>
+            <p>JRE-IKST-015-02(首都圏4-1番)</p>
           </div>
-<!--           <a href="../platform/kawasaki_4.html"></a> -->
+          <a href="../platform/musashikosugi_4.html"></a>
         </div>
       </div>
   </div>
