--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <script>
         const messages = [
           {
-            text: "【ページ追加】2026.1.15 中央総武線 幕張駅 #2･#3･#3(旧)・北陸新幹線等 高崎駅･#12~#14",
+            text: "【ページ追加】2026.1.17 横須賀線等 武蔵小杉駅 #3･#3(旧)･#4･#4(旧)",
             url: null
           },
           {
