--- a/thanks.html
+++ b/thanks.html
@@ -1745,6 +1745,22 @@
             <td>高崎#14 発車放送</td>
             <td><a href="https://x.com/i/user/1542014017010794498">しゃけ様</a></td>
           </tr>
+          <tr>
+            <td>淡い恋心</td>
+            <td><a href="https://x.com/i/user/1528965644452253696">中田葦様</a></td>
+          </tr>
+          <tr>
+            <td>武蔵小杉#3 戸閉放送</td>
+            <td><a href="https://x.com/i/user/1528965644452253696">中田葦様</a></td>
+          </tr>
+          <tr>
+            <td>SF10-43</td>
+            <td><a href="https://x.com/i/user/1528965644452253696">中田葦様</a></td>
+          </tr>
+          <tr>
+            <td>武蔵小杉#4 戸閉放送</td>
+            <td><a href="https://x.com/i/user/1528965644452253696">中田葦様</a></td>
+          </tr>
         </tbody>
       </table>
     </div>
