--- a/jre.html
+++ b/jre.html
@@ -229,6 +229,14 @@
             <p>相模線</p>
           </div>
           <a href="line/sagami.html"></a>
+        </div>      
+        <div class="column">
+          <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/八高川越線.jpg" alt="八高川越線">
+          <div class="line">
+<!--             <img src="https://cdn.glitch.global/f6b8403f-df22-44d1-8c21-1151b6811bd0/image-removebg-preview%20(30).png?v=1743655685173"> -->
+            <p>八高川越線</p>
+          </div>
+          <a href="line/kawagoe.html"></a>
         </div>        
         <div class="column">
           <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/成田線.jpg" alt="成田線">
@@ -237,7 +245,9 @@
             <p>成田線</p>
           </div>
           <a href="line/narita.html"></a>
-        </div>        
+        </div>            
+      </div>
+      <div class="container">   
         <div class="column">
           <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/我孫子支線.jpg" alt="我孫子支線">
           <div class="line">
@@ -245,9 +255,7 @@
             <p>我孫子支線</p>
           </div>
           <a href="line/abiko.html"></a>
-        </div>         
-      </div>
-      <div class="container">
+        </div>  
         <div class="column">
           <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/鹿島線.jpg" alt="鹿島線">
           <div class="line">
@@ -278,6 +286,8 @@
           </div>
           <a href="line/takasaki.html"></a>
         </div>  
+      </div>
+      <div class="container">  
         <div class="column">
           <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/上越線.jpg" alt="上越線">
           <div class="line">
@@ -286,8 +296,6 @@
           </div>
           <a href="line/joetsu.html"></a>
         </div>  
-      </div>
-      <div class="container">  
         <div class="column">
           <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/両毛線.jpg" alt="仙石線">
           <div class="line">
@@ -320,6 +328,8 @@
           </div>
           <a href="line/hokuriku_shinkansen.html"></a>
         </div>    
+      </div>
+      <div class="container">
         <div class="column">
           <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/東北新幹線.jpg" alt="東北新幹線">
           <div class="line">
@@ -328,17 +338,7 @@
           </div>
           <a href="line/tohoku_shinkansen.html"></a>
         </div>   
-      </div>
-      <div class="container">
         <div class="column">
-          <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/山形新幹線.jpg" alt="山形新幹線">
-          <div class="line">
-<!--             <img src="https://cdn.glitch.global/f6b8403f-df22-44d1-8c21-1151b6811bd0/image-removebg-preview%20(30).png?v=1743655685173"> -->
-            <p>山形新幹線</p>
-          </div>
-          <a href="line/yamagata_shinkansen.html"></a>
-        </div>    
-        <div class="column columnj" style="visibility: hidden;">
           <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/山形新幹線.jpg" alt="山形新幹線">
           <div class="line">
 <!--             <img src="https://cdn.glitch.global/f6b8403f-df22-44d1-8c21-1151b6811bd0/image-removebg-preview%20(30).png?v=1743655685173"> -->
