--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <script>
         const messages = [
           {
-            text: "【ページ追加】2026.1.17 横須賀線等 武蔵小杉駅 #3･#3(旧)･#4･#4(旧)",
+            text: "【ページ追加】2026.1.18 八高川越線・同線等 八王子駅 #1",
             url: null
           },
           {
