--- a/thanks.html
+++ b/thanks.html
@@ -1761,6 +1761,14 @@
             <td>武蔵小杉#4 戸閉放送</td>
             <td><a href="https://x.com/i/user/1528965644452253696">中田葦様</a></td>
           </tr>
+          <tr>
+            <td>夕焼け小焼け verC</td>
+            <td><a href="https://x.com/i/user/1426497394565292032">鉄道チャンネル様</a></td>
+          </tr>
+          <tr>
+            <td>八王子#1 戸閉放送</td>
+            <td><a href="https://x.com/i/user/1426497394565292032">鉄道チャンネル様</a></td>
+          </tr>
         </tbody>
       </table>
     </div>
