--- a/station/hachioji.html
+++ b/station/hachioji.html
@@ -39,12 +39,12 @@
     <div class="main">
       <div class="container">
         <div class="column">
-          <img src="https://static.wixstatic.com/media/0acb38_69ab0de89b7d461cb78ad11733da0372~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_69ab0de89b7d461cb78ad11733da0372~mv2.png" alt="八王子駅">
+          <!-- <img src="https://static.wixstatic.com/media/0acb38_69ab0de89b7d461cb78ad11733da0372~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_69ab0de89b7d461cb78ad11733da0372~mv2.png" alt="八王子駅"> -->
           <div class="platform">
             <h2>1番線 -八高線下り</h2>
-            <p>夕焼け小焼け verC 【未収録・使用終了済】</p>
+            <p>夕焼け小焼け verC</p>
           </div>
-<!--           <a href="../platform/hachioji_1.html"></a> -->
+          <a href="../platform/hachioji_1.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_341065e46e2b475d9782e6cf8a2eb80f~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_341065e46e2b475d9782e6cf8a2eb80f~mv2.png" alt="八王子駅">
