--- a/ikst/ikst.html
+++ b/ikst/ikst.html
@@ -42,7 +42,7 @@
         <div class="message" id="message"></div>
         <script>
           const messages = [
-            "2026/1/19 立川駅(#1･#2)・西立川駅 メロディ変更",
+            "2026/1/19 立川駅(#1･#2)・西立川駅・東中神駅・中神駅・昭島駅 メロディ変更",
           ];
 
           const messageElem = document.getElementById("message");
