--- a/station/tachikawa.html
+++ b/station/tachikawa.html
@@ -41,7 +41,7 @@
           <img src="https://static.wixstatic.com/media/0acb38_525e0b3f209542c1abc1ff962c89cbde~mv2.png/v1/fill/w_332,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_525e0b3f209542c1abc1ff962c89cbde~mv2.png" alt="立川駅">
           <div class="platform">
             <h2>1番線 -青梅線下り</h2>
-            <p>曲名不明(首都圏22番、立川1番)</p>
+            <p>曲名不明(首都圏41番) 〈変更前〉</p>
           </div>
           <a href="../platform/tachikawa_1.html"></a>
         </div>
@@ -49,7 +49,7 @@
           <img src="https://static.wixstatic.com/media/0acb38_525e0b3f209542c1abc1ff962c89cbde~mv2.png/v1/fill/w_332,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_525e0b3f209542c1abc1ff962c89cbde~mv2.png" alt="立川駅">
           <div class="platform">
             <h2>2番線 -青梅線下り</h2>
-            <p>曲名不明(首都圏23番、立川2番)</p>
+            <p>曲名不明(首都圏42番) 〈変更前〉</p>
           </div>
           <a href="../platform/tachikawa_2.html"></a>
         </div>
