--- a/line/ome.html
+++ b/line/ome.html
@@ -45,8 +45,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_a510f6fc483344a6b32653834a7bf149~mv2.png/v1/fill/w_303,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_a510f6fc483344a6b32653834a7bf149~mv2.png" alt="西立川駅">
-          <p>西立川駅 【未収録】</p>
-          <!-- <a href="../station/nishitachikawa.html"></a> -->
+          <p>西立川駅</p>
+          <a href="../station/nishitachikawa.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_a4f93efd151d463faf73591e1dea2b0f~mv2.png/v1/fill/w_303,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_a4f93efd151d463faf73591e1dea2b0f~mv2.png" alt="東中神駅">
