--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <script>
         const messages = [
           {
-            text: "【ページ追加】2026.1.18 八高川越線・同線等 八王子駅 #1",
+            text: "【ページ追加】2026.1.19 青梅線 西立川駅･#1(旧)･#2(旧)",
             url: null
           },
           {
