--- a/thanks.html
+++ b/thanks.html
@@ -1769,6 +1769,14 @@
             <td>八王子#1 戸閉放送</td>
             <td><a href="https://x.com/i/user/1426497394565292032">鉄道チャンネル様</a></td>
           </tr>
+          <tr>
+            <td>雨のステイション verB</td>
+            <td><a href="https://x.com/i/user/1958851917452648450">房総愛好家&狂い人様</a></td>
+          </tr>
+          <tr>
+            <td>雨のステイション verC</td>
+            <td><a href="https://x.com/i/user/1958851917452648450">房総愛好家&狂い人様</a></td>
+          </tr>
         </tbody>
       </table>
     </div>
