--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="menu-item-sp"><li class="menu-item-sp"><a href="search.html"><img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/search.png" alt="スマホで表示する画像"></a></li></div>
       </ul>
     </nav>
-    <audio id="melody" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/%E9%A6%96%E9%83%BD%E5%9C%8F22%E7%95%AA%20%E3%82%A2%E3%83%AC%E3%83%B3%E3%82%B8ver.mp3"></audio>
+    <audio id="melody" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/%E9%A6%96%E9%83%BD%E5%9C%8F22%E7%95%AA%20%E3%82%A2%E3%83%AC%E3%83%B3%E3%82%B8ver_V2.mp3"></audio>
     <script>
       let Playing;
       let audio = document.getElementById("melody");
@@ -99,6 +99,10 @@
       <script>
         const messages = [
           {
+            text: "【機能追加】2026.1.19 トップページBGM変更：2026年1月限定曲(1/19~)「首都圏22番 アレンジver_V2」",
+            url: null
+          },
+          {
             text: "【ページ追加】2026.1.19 青梅線 西立川駅･#1(旧)･#2(旧)",
             url: null
           },
@@ -112,10 +116,6 @@
           },
           {
             text: "【お知らせ】2026.1.1 明けましておめでとうございます。今年も変わらぬご愛顧のほど何卒よろしくお願いいたします。",
-            url: null
-          },
-          {
-            text: "【機能追加】2026.1.1 トップページBGM変更：2026年1月限定曲「首都圏22番 アレンジver」",
             url: null
           },
         ];
