--- a/thanks.html
+++ b/thanks.html
@@ -168,7 +168,11 @@
             <td><a href="https://x.com/i/user/1698717122145460224">マルーンの疾風様</a></td>
           </tr>
           <tr>
-            <td>2026年1月限定曲「首都圏22番 アレンジver」</td>
+            <td>2026年1月限定曲(~1/19)「首都圏22番 アレンジver」</td>
+            <td><a href="https://x.com/i/user/1669323825673281536">みなのん♬様</a></td>
+          </tr>
+          <tr>
+            <td>2026年1月限定曲(1/19~)「首都圏22番 アレンジver_V2」</td>
             <td><a href="https://x.com/i/user/1669323825673281536">みなのん♬様</a></td>
           </tr>
         </tbody>
