--- a/ikst/ikst.html
+++ b/ikst/ikst.html
@@ -42,7 +42,7 @@
         <div class="message" id="message"></div>
         <script>
           const messages = [
-            "2026/1/20 牛浜駅・福生駅 メロディ変更",
+            "2026/1/20 牛浜駅・福生駅・羽村駅 メロディ変更",
           ];
 
           const messageElem = document.getElementById("message");
