--- a/thanks.html
+++ b/thanks.html
@@ -179,6 +179,7 @@
       </table>
       <h1>音声提供</h1>      
       <p>※音声利用にあたって、提供いただいた音声の編集を行っている場合があります。二次利用申請の場合を除き、サイト内の音声に関する提供者さまへのお問い合わせはご遠慮ください。</p>
+      <p>こちらに挙げた音声以外でも、匿名の方から提供をいただいている場合があります。二次利用の場合には非提供音声と同様の扱いとなりますので、ご了承ください。</p>
       <table>
         <tbody>
           <tr>
