--- a/ikst/ikst.html
+++ b/ikst/ikst.html
@@ -42,7 +42,7 @@
         <div class="message" id="message"></div>
         <script>
           const messages = [
-            "2026/1/21 河辺駅・東青梅駅 メロディ変更",
+            "2026/1/21 河辺駅・東青梅駅・青梅駅 メロディ変更",
           ];
 
           const messageElem = document.getElementById("message");
