--- a/platform/ome_1_o.html
+++ b/platform/ome_1_o.html
@@ -173,7 +173,7 @@
       <div class="arrange">
         <div class="content">
           <h1>青梅駅 1番線(旧)「恋の通勤列車」</h1>
-          <p>収録駅:武蔵浦和駅4番線</p>
+          <p>収録駅:横川駅1番線</p>
           <p>スピーカー:小VOSS・JVC横長新型・教室型(青梅)</p>
         
         </div>
