--- a/platform/ome_4.html
+++ b/platform/ome_4.html
@@ -174,7 +174,7 @@
         <div class="content">
           <h1>青梅駅 4番線「曲名不明(首都圏41-5番)」</h1>
           <p>収録駅:青梅駅4番線</p>
-          <p>スピーカー:小VOSS・JVC横長新型</p>
+          <p>スピーカー:JVC横長新型</p>
         
         </div>
         <label  style="margin-left: 20px;"><input type="checkbox" id="buttonon">ボタン音オフ</label>
