--- a/platform/ome_3_o.html
+++ b/platform/ome_3_o.html
@@ -174,7 +174,7 @@
         <div class="content">
           <h1>青梅駅 3番線(旧)「フラワーショップ」</h1>
           <p>収録駅:成田駅5番線</p>
-          <p>スピーカー:小VOSS・JVC横長新型(青梅)</p>
+          <p>スピーカー:JVC横長新型(青梅)</p>
         
         </div>
         <label  style="margin-left: 20px;"><input type="checkbox" id="buttonon">ボタン音オフ</label>
