--- a/line/ome.html
+++ b/line/ome.html
@@ -100,8 +100,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_3d78a9ee4f0d41db8d994f6f5eba904e~mv2.png/v1/fill/w_303,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_3d78a9ee4f0d41db8d994f6f5eba904e~mv2.png" alt="青梅駅">
-          <p>青梅駅 【未収録】</p>
-<!--           <a href="../station/ome.html"></a> -->
+          <p>青梅駅</p>
+          <a href="../station/ome.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_eb8b46f169cf444fa13a8c809aba0c76~mv2.png/v1/fill/w_303,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_eb8b46f169cf444fa13a8c809aba0c76~mv2.png" alt="宮ノ平駅">
