--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
       <script>
         const messages = [
           {
-            text: "【機能追加】2026.1.19 トップページBGM変更：2026年1月限定曲(1/19~)「首都圏22番 アレンジver_V2」",
+            text: "【ページ追加】2026.1.20 青梅線 青梅駅･#1･#1(旧)･#2･#2(旧)･#3･#3(旧)･#4･#4(旧)",
             url: null
           },
           {
-            text: "【ページ追加】2026.1.19 青梅線 西立川駅･#1(旧)･#2(旧)",
+            text: "【機能追加】2026.1.19 トップページBGM変更：2026年1月限定曲(1/19~)「首都圏22番 アレンジver_V2」",
             url: null
           },
           {
