--- a/thanks.html
+++ b/thanks.html
@@ -1782,6 +1782,22 @@
             <td>雨のステイション verC</td>
             <td><a href="https://x.com/i/user/1958851917452648450">房総愛好家&狂い人様</a></td>
           </tr>
+          <tr>
+            <td>首都圏41番</td>
+            <td><a href="https://x.com/i/user/1808147355864297472">イサ様</a></td>
+          </tr>
+          <tr>
+            <td>首都圏41-1番</td>
+            <td><a href="https://x.com/i/user/1808147355864297472">イサ様</a></td>
+          </tr>
+          <tr>
+            <td>首都圏41-4番</td>
+            <td><a href="https://x.com/i/user/1808147355864297472">イサ様</a></td>
+          </tr>
+          <tr>
+            <td>首都圏41-5番</td>
+            <td><a href="https://x.com/i/user/1808147355864297472">イサ様</a></td>
+          </tr>
         </tbody>
       </table>
     </div>
