--- a/station/nishitachikawa.html
+++ b/station/nishitachikawa.html
@@ -42,17 +42,17 @@
           <img src="https://static.wixstatic.com/media/0acb38_a510f6fc483344a6b32653834a7bf149~mv2.png/v1/fill/w_287,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_a510f6fc483344a6b32653834a7bf149~mv2.png" alt="西立川駅">
           <div class="platform">
             <h2>1番線 -青梅線下り</h2>
-            <p>曲名不明(首都圏41番) 〈変更前〉</p>
+            <p>曲名不明(首都圏41番)</p>
           </div>
-          <a href="../platform/nishitachikawa_1_o.html"></a>
+          <a href="../platform/nishitachikawa_1.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_a510f6fc483344a6b32653834a7bf149~mv2.png/v1/fill/w_287,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_a510f6fc483344a6b32653834a7bf149~mv2.png" alt="西立川駅">
           <div class="platform">
             <h2>2番線 -青梅線上り</h2>
-            <p>曲名不明(首都圏41-1番) 〈変更前〉</p>
+            <p>曲名不明(首都圏41-1番)</p>
           </div>
-          <a href="../platform/nishitachikawa_2_o.html"></a>
+          <a href="../platform/nishitachikawa_2.html"></a>
         </div>
       </div>
   </div>
