--- a/line/ome.html
+++ b/line/ome.html
@@ -90,8 +90,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_26623e790bb04b5f9050be8571ca7b5f~mv2.png/v1/fill/w_303,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_26623e790bb04b5f9050be8571ca7b5f~mv2.png" alt="河辺駅">
-          <p>河辺駅 【未収録】</p>
-          <!-- <a href="../station/kabe.html"></a> -->
+          <p>河辺駅</p>
+          <a href="../station/kabe.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_8e4d47f2bdad47d5acaa2d9e9f38a78b~mv2.png/v1/fill/w_303,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_8e4d47f2bdad47d5acaa2d9e9f38a78b~mv2.png" alt="東青梅駅">
