--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <script>
         const messages = [
           {
-            text: "【ページ追加】2026.1.20 青梅線 青梅駅･#1･#1(旧)･#2･#2(旧)･#3･#3(旧)･#4･#4(旧)",
+            text: "【ページ追加】2026.1.22 青梅線 河辺駅･#1~#3･#1(旧)~#3(旧)",
             url: null
           },
           {
