--- a/platform/tachikawa_1_o2.html
+++ b/platform/tachikawa_1_o2.html
@@ -178,8 +178,9 @@
         </div>
         <label  style="margin-left: 20px;"><input type="checkbox" id="buttonon">ボタン音オフ</label>
         <select name="change" id="change" onchange="location.href=value;">
-          <option value="tachikawa_1_o.html">ホリデイV1</option>
-          <option value="tachikawa_1.html">曲名不明(首都圏22番、立川1番)</option>
+          <option value="tachikawa_1_o2.html">ホリデイV1</option>
+          <option value="tachikawa_1.html">曲名不明(首都圏41番)</option>
+          <option value="tachikawa_1_o1.html">曲名不明(首都圏22番、立川1番)</option>
         </select>
       </div>
     <script>
