Update and rename tachikawa_2_o.html to tachikawa_2_o2.html

--- a/platform/tachikawa_2_o2.html
+++ b/platform/tachikawa_2_o2.html
@@ -178,8 +178,9 @@
         </div>
         <label style="margin-left: 20px;"><input type="checkbox" id="buttonon">ボタン音オフ</label>
         <select name="change" id="change" onchange="location.href=value;">
-          <option value="tachikawa_2_o.html">JR-SH5-3</option>
-          <option value="tachikawa_2.html">曲名不明(首都圏23番、立川2番)</option>
+          <option value="tachikawa_2_o2.html">JR-SH5-3</option>
+          <option value="tachikawa_2.html">曲名不明(首都圏41-1番)</option>
+          <option value="tachikawa_2_o1.html">曲名不明(首都圏23番、立川2番)</option>
         </select>
       </div>
     <script>
