--- a/platform/tachikawa_2.html
+++ b/platform/tachikawa_2.html
@@ -4,17 +4,17 @@
   <meta charset="utf-8" />
   <meta name="robots" content="index, follow">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="立川駅2番線の発車メロディ「曲名不明(首都圏23番、立川2番)」の再現ができます！">
+  <meta name="description" content="立川駅2番線の発車メロディ「曲名不明(首都圏41-1番)」の再現ができます！">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="icon" href="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/e233yo.png" />
   <link rel="stylesheet" href="tachikawa_2.css">
   <meta property="og:image" content="https://cdn.glitch.global/f6b8403f-df22-44d1-8c21-1151b6811bd0/tv_onsei.png?v=1743405036680">
-  <meta property="og:description" content="立川駅2番線の発車メロディ「曲名不明(首都圏23番、立川2番)」の再現ができます！">
-  <meta property="og:title" content="立川駅2番線「曲名不明(首都圏23番、立川2番)」｜どこでもステーションベル">
+  <meta property="og:description" content="立川駅2番線の発車メロディ「曲名不明(首都圏41-1番)」の再現ができます！">
+  <meta property="og:title" content="立川駅2番線「曲名不明(首都圏41-1番)」｜どこでもステーションベル">
   <meta property="og:url" content="https://ssmn93.github.io/depart-melody">
   <meta name="twitter:card" content="summary_large_image">
-  <meta property="og:site_name" content="立川駅2番線「曲名不明(首都圏23番、立川2番)」｜どこでもステーションベル">
-  <title>立川駅2番線「曲名不明(首都圏23番、立川2番)」｜どこでもステーションベル</title>
+  <meta property="og:site_name" content="立川駅2番線「曲名不明(首都圏41-1番)」｜どこでもステーションベル">
+  <title>立川駅2番線「曲名不明(首都圏41-1番)」｜どこでもステーションベル</title>
 </head>
 <body>
   <header>
@@ -165,21 +165,22 @@
         <rect class="button" id="offButton" x="432" y="445" width="100" height="100" fill="#e06666" stroke="#e06666" stroke-width="2"/>
         <text class="button" id="offText" x="440" y="515" font-size="50" fill="white">OFF</text>
         </svg>
-    <audio id="melody" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/%E7%AB%8B%E5%B7%9D2%E7%95%AA.mp3"></audio>
+    <audio id="melody" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/%E9%A6%96%E9%83%BD%E5%9C%8F41-1%E7%95%AA.mp3"></audio>
     <audio id="tojime" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/%E6%88%B8%E9%96%89%E6%94%BE%E9%80%81_%E5%A5%B3%E5%A3%B02%E7%95%AA.mp3"></audio>
     <audio id="button" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/button.mp3"></audio>
     
     </div>
       <div class="arrange">
         <div class="content">
-          <h1>立川駅 2番線「曲名不明(首都圏23番、立川2番)」</h1>
-          <p>収録駅:立川駅2番線</p>
-          <p>スピーカー:JVC横長型・天井型</p>
+          <h1>立川駅 2番線「曲名不明(首都圏41-1番)」</h1>
+          <p>収録駅:青梅駅2番線</p>
+          <p>スピーカー:JVC横長型・天井型(立川)</p>
         </div>
         <label style="margin-left: 20px;"><input type="checkbox" id="buttonon">ボタン音オフ</label>
         <select name="change" id="change" onchange="location.href=value;">
-          <option value="tachikawa_2.html">曲名不明(首都圏23番、立川2番)</option>
-          <option value="tachikawa_2_o.html">JR-SH5-3</option>
+          <option value="tachikawa_2.html">曲名不明(首都圏41-1番)</option>
+          <option value="tachikawa_2_o1.html">曲名不明(首都圏23番、立川2番)</option>
+          <option value="tachikawa_2_o2.html">JR-SH5-3</option>
         </select>
       </div>
     <script>
