--- a/station/morioka.html
+++ b/station/morioka.html
@@ -66,7 +66,7 @@
 <!--           <img src="https://static.wixstatic.com/media/0acb38_38b190a5a6734c32a38dc863da7b90ea~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_38b190a5a6734c32a38dc863da7b90ea~mv2.png" alt="盛岡駅"> -->
           <div class="platform">
             <h2>3番線 -いわて銀河鉄道線下り・東北本線上り</h2>
-            <p>【使用曲不明・未収録】</p>
+            <p>JRE-IKST-021-01(首都圏3-1番) 【未収録】</p>
           </div>
           <!-- <a href="../platform/morioka_3.html"></a> -->
         </div>
@@ -114,7 +114,7 @@
 <!--           <img src="https://static.wixstatic.com/media/0acb38_38b190a5a6734c32a38dc863da7b90ea~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_38b190a5a6734c32a38dc863da7b90ea~mv2.png" alt="盛岡駅"> -->
           <div class="platform">
             <h2>9番線 -田沢湖線下り</h2>
-            <p>【使用曲不明・未収録】</p>
+            <p>曲名不明(東北103番) 【未収録】</p>
           </div>
           <!-- <a href="../platform/morioka_9.html"></a> -->
         </div>
