--- a/station/haijima.html
+++ b/station/haijima.html
@@ -42,7 +42,7 @@
           <img src="https://static.wixstatic.com/media/0acb38_d2395f3aa89d48c09344f95d998927ec~mv2.png/v1/fill/w_303,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_d2395f3aa89d48c09344f95d998927ec~mv2.png" alt="拝島駅">
           <div class="platform">
             <h2>1番線 -青梅線・五日市線上下</h2>
-            <p>木々の目覚めV1</p>
+            <p>曲名不明(首都圏41-6番) 〈変更前〉</p>
           </div>
           <a href="../platform/haijima_1.html"></a>
         </div>
@@ -50,7 +50,7 @@
           <img src="https://static.wixstatic.com/media/0acb38_d2395f3aa89d48c09344f95d998927ec~mv2.png/v1/fill/w_303,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_d2395f3aa89d48c09344f95d998927ec~mv2.png" alt="拝島駅">
           <div class="platform">
             <h2>2番線 -青梅線・五日市線下り</h2>
-            <p>Cappuccino</p>
+            <p>曲名不明(首都圏41番) 〈変更前〉</p>
           </div>
           <a href="../platform/haijima_2.html"></a>
         </div>
@@ -58,7 +58,7 @@
           <img src="https://static.wixstatic.com/media/0acb38_d2395f3aa89d48c09344f95d998927ec~mv2.png/v1/fill/w_303,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_d2395f3aa89d48c09344f95d998927ec~mv2.png" alt="拝島駅">
           <div class="platform">
             <h2>3番線 -青梅線上り</h2>
-            <p>朝の静けさ</p>
+            <p>曲名不明(首都圏41-1番) 〈変更前〉</p>
           </div>
           <a href="../platform/haijima_3.html"></a>
         </div>
@@ -66,7 +66,7 @@
 <!--           <img src="https://static.wixstatic.com/media/0acb38_1193b456ac19437194df8cc6ec63eff5~mv2.png/v1/fill/w_332,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_1193b456ac19437194df8cc6ec63eff5~mv2.png" alt="分倍河原駅"> -->
           <div class="platform">
             <h2>4番線 -八高線下り</h2>
-            <p>あざみ野V1</p>
+            <p>〈使用曲不明・変更前〉</p>
           </div>
           <a href="../platform/haijima_4.html"></a>
         </div>
@@ -74,7 +74,7 @@
 <!--           <img src="https://static.wixstatic.com/media/0acb38_1193b456ac19437194df8cc6ec63eff5~mv2.png/v1/fill/w_332,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_1193b456ac19437194df8cc6ec63eff5~mv2.png" alt="分倍河原駅"> -->
           <div class="platform">
             <h2>5番線 -八高線上り</h2>
-            <p>メロディー</p>
+            <p>〈使用曲不明・変更前〉</p>
           </div>
           <a href="../platform/haijima_5.html"></a>
         </div>
