--- a/line/chuo.html
+++ b/line/chuo.html
@@ -155,8 +155,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_0c97716cb1b3491bbde7ea27a1e42d52~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_0c97716cb1b3491bbde7ea27a1e42d52~mv2.png" alt="高尾駅">
-          <p>高尾駅 【未収録】</p>
-<!--           <a href="../station/takao.html"></a> -->
+          <p>高尾駅</p>
+          <a href="../station/takao.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_5e39542a126b4f7987a7f3b08724794f~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_5e39542a126b4f7987a7f3b08724794f~mv2.png" alt="相模湖駅">
