--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <script>
         const messages = [
           {
-            text: "【ページ追加】2026.1.22 青梅線 河辺駅･#1~#3･#1(旧)~#3(旧)",
+            text: "【ページ追加】2026.1.24 中央快速線等 高尾駅･#1~#4･#1(旧)~#4(旧)",
             url: null
           },
           {
