--- a/thanks.html
+++ b/thanks.html
@@ -1798,6 +1798,14 @@
             <td>首都圏41-5番</td>
             <td><a href="https://x.com/i/user/1808147355864297472">イサ様</a></td>
           </tr>
+          <tr>
+            <td>四季「春」第1楽章</td>
+            <td><a href="https://x.com/i/user/1528965644452253696">中田葦様</a></td>
+          </tr>
+          <tr>
+            <td>四季「秋」第3楽章</td>
+            <td><a href="https://x.com/i/user/1528965644452253696">中田葦様</a></td>
+          </tr>
         </tbody>
       </table>
     </div>
