--- a/station/morioka.html
+++ b/station/morioka.html
@@ -76,7 +76,15 @@
             <h2>4番線 -東北本線上り</h2>
             <p>JRE-IKST-021-01(首都圏3-1番) 【未収録】</p>
           </div>
-          <!-- <a href="../platform/morioka_4.html"></a> -->
+          <!-- <a href="../platform/morioka_4_t.html"></a> -->
+        </div>
+        <div class="column">
+<!--           <img src="https://static.wixstatic.com/media/0acb38_38b190a5a6734c32a38dc863da7b90ea~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_38b190a5a6734c32a38dc863da7b90ea~mv2.png" alt="盛岡駅"> -->
+          <div class="platform">
+            <h2>4番線 -山田線下り</h2>
+            <p>曲名不明(首都圏29-1番) 【未収録】</p>
+          </div>
+          <!-- <a href="../platform/morioka_4_y.html"></a> -->
         </div>
         <div class="column">
 <!--           <img src="https://static.wixstatic.com/media/0acb38_38b190a5a6734c32a38dc863da7b90ea~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_38b190a5a6734c32a38dc863da7b90ea~mv2.png" alt="盛岡駅"> -->
