--- a/station/ginza.html
+++ b/station/ginza.html
@@ -7,7 +7,7 @@
   <meta name="description" content="このサイトでは、発車メロディを再現することができます！">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="icon" href="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/e233yo.png" />
-  <link rel="stylesheet" href="hibiya.css">
+  <link rel="stylesheet" href="ginza.css">
   <meta property="og:image" content="https://cdn.glitch.global/f6b8403f-df22-44d1-8c21-1151b6811bd0/tv_onsei.png?v=1743405036680">
   <meta property="og:description" content="このサイトでは、発車メロディを再現することができます！">
   <meta property="og:title" content="銀座駅｜どこでもステーションベル">
@@ -42,33 +42,33 @@
           <img src="https://static.wixstatic.com/media/0acb38_dce73dfca8004bfb996ba126ac424240~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_dce73dfca8004bfb996ba126ac424240~mv2.png" alt="銀座駅">
           <div class="platform">
             <h2>1番線 -銀座線A線</h2>
-            <p>銀座カンカン娘 Aメロver 【未収録】</p>
+            <p>銀座カンカン娘 Aメロver</p>
           </div>
-<!--           <a href="../platform/ginza_1.html"></a> -->
+          <a href="../platform/ginza_1.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_dce73dfca8004bfb996ba126ac424240~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_dce73dfca8004bfb996ba126ac424240~mv2.png" alt="銀座駅">
           <div class="platform">
             <h2>2番線 -銀座線B線</h2>
-            <p>銀座カンカン娘 サビver 【未収録】</p>
+            <p>銀座カンカン娘 サビver</p>
           </div>
-<!--           <a href="../platform/ginza_2.html"></a> -->
+          <a href="../platform/ginza_2.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_bcba695d69314e6098c75c2f61b76867~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_bcba695d69314e6098c75c2f61b76867~mv2.png" alt="銀座駅">
           <div class="platform">
             <h2>3番線 -丸ノ内線A線</h2>
-            <p>明日の扉 【未収録】</p>
+            <p>明日の扉</p>
           </div>
-<!--           <a href="../platform/ginza_3.html"></a> -->
+          <a href="../platform/ginza_3.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_bcba695d69314e6098c75c2f61b76867~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_bcba695d69314e6098c75c2f61b76867~mv2.png" alt="銀座駅">
           <div class="platform">
             <h2>4番線 -丸ノ内線B線</h2>
-            <p>小鳥の行進 【未収録】</p>
+            <p>小鳥の行進</p>
           </div>
-<!--           <a href="../platform/ginza_4.html"></a> -->
+          <a href="../platform/ginza_4.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_cc3b16436c2d439eb94f7ebf504fa718~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_cc3b16436c2d439eb94f7ebf504fa718~mv2.png" alt="銀座駅">
