--- a/station/tokyo.html
+++ b/station/tokyo.html
@@ -217,17 +217,17 @@
           <img src="https://static.wixstatic.com/media/0acb38_9d346a32af744437a1349a55042e7094~mv2.png/v1/fill/w_399,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_9d346a32af744437a1349a55042e7094~mv2.png" alt="東京駅">
           <div class="platform">
             <h2>1番線 -丸ノ内線A線</h2>
-            <p>らくらく乗降 【未収録】</p>
+            <p>らくらく乗降</p>
           </div>
-<!--           <a href="../platform/tokyo_m1.html"></a> -->
+          <a href="../platform/tokyo_m1.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_9d346a32af744437a1349a55042e7094~mv2.png/v1/fill/w_399,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_9d346a32af744437a1349a55042e7094~mv2.png" alt="東京駅">
           <div class="platform">
             <h2>2番線 -丸ノ内線B線</h2>
-            <p>夢心地 【未収録】</p>
+            <p>夢心地</p>
           </div>
-<!--           <a href="../platform/tokyo_m2.html"></a> -->
+          <a href="../platform/tokyo_m2.html"></a>
         </div>
       </div>
   </div>
