--- a/line/marunouchi.html
+++ b/line/marunouchi.html
@@ -80,8 +80,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_618490d1e8d74c538fdd8338afbc1029~mv2.png/v1/fill/w_612,h_612,al_c,q_90,usm_0.66_1.00_0.01,enc_auto/0acb38_618490d1e8d74c538fdd8338afbc1029~mv2.png" alt="新宿三丁目駅">
-          <p>新宿三丁目駅 【未収録】</p>
-<!--           <a href="../station/shinjukusanchome.html"></a> -->
+          <p>新宿三丁目駅</p>
+          <a href="../station/shinjukusanchome.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_6a6acbc8cf0b46f8bd6efc49a1640219~mv2.png/v1/fill/w_612,h_612,al_c,q_90,usm_0.66_1.00_0.01,enc_auto/0acb38_6a6acbc8cf0b46f8bd6efc49a1640219~mv2.png" alt="新宿御苑前駅">
