--- a/line/ginza.html
+++ b/line/ginza.html
@@ -70,8 +70,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_ea4c2ec41624445ba4c24facac08d3bc~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_ea4c2ec41624445ba4c24facac08d3bc~mv2.png" alt="虎ノ門駅">
-          <p>虎ノ門駅 【未収録】</p>
-<!--           <a href="../station/toranomon.html"></a> -->
+          <p>虎ノ門駅</p>
+          <a href="../station/toranomon.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_38776955e9c8449b8e9efe6a0a99d29a~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_38776955e9c8449b8e9efe6a0a99d29a~mv2.png" alt="新橋駅">
