--- a/line/namboku.html
+++ b/line/namboku.html
@@ -65,8 +65,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_5d2979c1894c4f22ab21877d83c545be~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_5d2979c1894c4f22ab21877d83c545be~mv2.png" alt="溜池山王駅">
-          <p>溜池山王駅 【未収録】</p>
-<!--           <a href="../station/tameikesannno.html"></a> -->
+          <p>溜池山王駅</p>
+          <a href="../station/tameikesannno.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_5d8348d354254640ac37d10119f59a41~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_5d8348d354254640ac37d10119f59a41~mv2.png" alt="永田町駅">
@@ -75,8 +75,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_0665e22a103f4b239b1df9b1bb3cddb4~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_0665e22a103f4b239b1df9b1bb3cddb4~mv2.png" alt="四ツ谷駅">
-          <p>四ツ谷駅 【未収録】</p>
-<!--           <a href="../station/yotsuya.html"></a> -->
+          <p>四ツ谷駅</p>
+          <a href="../station/yotsuya.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_a4935972bada48bb812ce3cc38e02166~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_a4935972bada48bb812ce3cc38e02166~mv2.png" alt="市ヶ谷駅">
