--- a/station/tameikesanno.html
+++ b/station/tameikesanno.html
@@ -58,17 +58,17 @@
           <img src="https://static.wixstatic.com/media/0acb38_5d2979c1894c4f22ab21877d83c545be~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_5d2979c1894c4f22ab21877d83c545be~mv2.png" alt="溜池山王駅">
           <div class="platform">
             <h2>3番線 -南北線A線</h2>
-            <p>poco a poco 【未収録】</p>
+            <p>poco a poco</p>
           </div>
-<!--           <a href="../platform/tameikesanno_3.html"></a> -->
+          <a href="../platform/tameikesanno_3.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_5d2979c1894c4f22ab21877d83c545be~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_5d2979c1894c4f22ab21877d83c545be~mv2.png" alt="溜池山王駅">
           <div class="platform">
             <h2>4番線 -南北線B線</h2>
-            <p>天然水 【未収録】</p>
+            <p>天然水</p>
           </div>
-<!--           <a href="../platform/tameikesanno_4.html"></a> -->
+          <a href="../platform/tameikesanno_4.html"></a>
         </div>
       </div>
   </div>
