--- a/ikst/ikst.html
+++ b/ikst/ikst.html
@@ -42,7 +42,7 @@
         <div class="message" id="message"></div>
         <script>
           const messages = [
-            "2026/1/23 盛岡駅(2~9番線)・拝島駅・熊川駅・東秋留駅 メロディ変更",
+            "2026/1/27 秋川駅 メロディ変更",
           ];
 
           const messageElem = document.getElementById("message");
