--- a/line/namboku.html
+++ b/line/namboku.html
@@ -66,7 +66,7 @@
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_5d2979c1894c4f22ab21877d83c545be~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_5d2979c1894c4f22ab21877d83c545be~mv2.png" alt="溜池山王駅">
           <p>溜池山王駅</p>
-          <a href="../station/tameikesannno.html"></a>
+          <a href="../station/tameikesanno.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_5d8348d354254640ac37d10119f59a41~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_5d8348d354254640ac37d10119f59a41~mv2.png" alt="永田町駅">
