--- a/tobu.html
+++ b/tobu.html
@@ -64,14 +64,6 @@
           <a href="line/tobu_sano.html"></a>
         </div>
         <div class="column">
-          <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/東武桐生線.jpg" alt="東武桐生線">
-          <div class="line">
-            <img src="https://static.wixstatic.com/media/0acb38_127230956f8f4be59525aaa103ddb4b4~mv2.png/v1/fill/w_320,h_320,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/0acb38_127230956f8f4be59525aaa103ddb4b4~mv2.png">
-            <p>東武桐生線</p>
-          </div>
-          <a href="line/tobu_kiryu.html"></a>
-        </div>
-        <div class="column">
           <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/東武小泉線.jpg" alt="東武小泉線">
           <div class="line">
             <img src="https://static.wixstatic.com/media/0acb38_127230956f8f4be59525aaa103ddb4b4~mv2.png/v1/fill/w_320,h_320,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/0acb38_127230956f8f4be59525aaa103ddb4b4~mv2.png">
@@ -79,8 +71,6 @@
           </div>
           <a href="line/tobu_koizumi.html"></a>
         </div>
-    </div>
-      <div class="container">
         <div class="column">
           <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/東武日光線.jpg" alt="東武日光線">
           <div class="line">
@@ -89,6 +79,8 @@
           </div>
           <a href="line/tobu_nikko.html"></a>
         </div>
+    </div>
+      <div class="container">
         <div class="column">
           <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/東武鬼怒川線.jpg" alt="東武鬼怒川線">
           <div class="line">
@@ -112,6 +104,14 @@
             <p>東武東上線</p>
           </div>
           <a href="line/tobu_tojo.html"></a>
+        </div>
+        <div class="column columnj" style="visibility: hidden;">
+          <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/東武小泉線.jpg" alt="東武小泉線">
+          <div class="line">
+            <img src="https://static.wixstatic.com/media/0acb38_e6bb2e08d900462fb274afdac21fa23a~mv2.png/v1/fill/w_400,h_400,al_c/0acb38_e6bb2e08d900462fb274afdac21fa23a~mv2.png">
+            <p>東武小泉線</p>
+          </div>
+          <!-- <a href="line/tobu_koizumi.html"></a> -->
         </div>
         <div class="column columnj" style="visibility: hidden;">
           <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/東武小泉線.jpg" alt="東武小泉線">
