--- a/station/ota.html
+++ b/station/ota.html
@@ -105,18 +105,98 @@
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_7b22db5a24364adda55e2c55c9875187~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_7b22db5a24364adda55e2c55c9875187~mv2.png" alt="太田駅">
           <div class="platform">
-            <h2>6番線 -東武小泉線下り</h2>
-            <p>エリーゼのために</p>
+            <h2>5番線 -東武小泉線下り</h2>
+            <p>エリーゼのために 【未収録】</p>
           </div>
-          <a href="../platform/ota_6_k.html"></a>
+          <!-- <a href="../platform/ota_5_k.html"></a> -->
+        </div>
+        <div class="column">
+          <img src="https://static.wixstatic.com/media/0acb38_7b22db5a24364adda55e2c55c9875187~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_7b22db5a24364adda55e2c55c9875187~mv2.png" alt="太田駅">
+          <div class="platform">
+            <h2>5番線 -東武桐生線下り</h2>
+            <p>草競馬 【未収録】</p>
+          </div>
+          <!-- <a href="../platform/ota_5_i.html"></a> -->
+        </div>
+        <div class="column">
+          <img src="https://static.wixstatic.com/media/0acb38_7b22db5a24364adda55e2c55c9875187~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_7b22db5a24364adda55e2c55c9875187~mv2.png" alt="太田駅">
+          <div class="platform">
+            <h2>6番線 -東武小泉線下り</h2>
+            <p>エリーゼのために 【未収録】</p>
+          </div>
+          <!-- <a href="../platform/ota_6_k.html"></a> -->
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_7b22db5a24364adda55e2c55c9875187~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_7b22db5a24364adda55e2c55c9875187~mv2.png" alt="太田駅">
           <div class="platform">
             <h2>6番線 -東武桐生線下り</h2>
-            <p>草競馬</p>
+            <p>草競馬 【未収録】</p>
           </div>
-          <a href="../platform/ota_6_i.html"></a>
+          <!-- <a href="../platform/ota_6_i.html"></a> -->
+        </div>
+        <div class="column">
+          <img src="https://static.wixstatic.com/media/0acb38_7b22db5a24364adda55e2c55c9875187~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_7b22db5a24364adda55e2c55c9875187~mv2.png" alt="太田駅">
+          <div class="platform">
+            <h2>7番線 -東武伊勢崎線上り</h2>
+            <p>ロンドン橋 【未収録】</p>
+          </div>
+          <!-- <a href="../platform/ota_7_u.html"></a> -->
+        </div>
+        <div class="column">
+          <img src="https://static.wixstatic.com/media/0acb38_7b22db5a24364adda55e2c55c9875187~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_7b22db5a24364adda55e2c55c9875187~mv2.png" alt="太田駅">
+          <div class="platform">
+            <h2>7番線 -東武伊勢崎線下り</h2>
+            <p>It's a small world 【未収録】</p>
+          </div>
+          <!-- <a href="../platform/ota_7_d.html"></a> -->
+        </div>
+        <div class="column">
+          <img src="https://static.wixstatic.com/media/0acb38_7b22db5a24364adda55e2c55c9875187~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_7b22db5a24364adda55e2c55c9875187~mv2.png" alt="太田駅">
+          <div class="platform">
+            <h2>8番線 -東武伊勢崎線上り</h2>
+            <p>アヴィニョン橋の上で 【未収録】</p>
+          </div>
+          <!-- <a href="../platform/ota_8_u.html"></a> -->
+        </div>
+        <div class="column">
+          <img src="https://static.wixstatic.com/media/0acb38_7b22db5a24364adda55e2c55c9875187~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_7b22db5a24364adda55e2c55c9875187~mv2.png" alt="太田駅">
+          <div class="platform">
+            <h2>8番線 -東武伊勢崎線下り</h2>
+            <p>It's a small world 【未収録】</p>
+          </div>
+          <!-- <a href="../platform/ota_8_d.html"></a> -->
+        </div>
+        <div class="column">
+          <img src="https://static.wixstatic.com/media/0acb38_7b22db5a24364adda55e2c55c9875187~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_7b22db5a24364adda55e2c55c9875187~mv2.png" alt="太田駅">
+          <div class="platform">
+            <h2>9番線 -東武伊勢崎線上り</h2>
+            <p>大きな古時計 【未収録】</p>
+          </div>
+          <!-- <a href="../platform/ota_9_u.html"></a> -->
+        </div>
+        <div class="column">
+          <img src="https://static.wixstatic.com/media/0acb38_7b22db5a24364adda55e2c55c9875187~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_7b22db5a24364adda55e2c55c9875187~mv2.png" alt="太田駅">
+          <div class="platform">
+            <h2>9番線 -東武伊勢崎線下り</h2>
+            <p>ミッキーマウスマーチ 【未収録】</p>
+          </div>
+          <!-- <a href="../platform/ota_9_d.html"></a> -->
+        </div>
+        <div class="column">
+          <img src="https://static.wixstatic.com/media/0acb38_7b22db5a24364adda55e2c55c9875187~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_7b22db5a24364adda55e2c55c9875187~mv2.png" alt="太田駅">
+          <div class="platform">
+            <h2>10番線 -東武伊勢崎線上り</h2>
+            <p>村の鍛冶屋 【未収録】</p>
+          </div>
+          <!-- <a href="../platform/ota_10_u.html"></a> -->
+        </div>
+        <div class="column">
+          <img src="https://static.wixstatic.com/media/0acb38_7b22db5a24364adda55e2c55c9875187~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_7b22db5a24364adda55e2c55c9875187~mv2.png" alt="太田駅">
+          <div class="platform">
+            <h2>10番線 -東武伊勢崎線下り</h2>
+            <p>ミッキーマウスマーチ 【未収録】</p>
+          </div>
+          <!-- <a href="../platform/ota_10_u.html"></a> -->
         </div>
       </div>
   </div>
