--- a/line/tobu_nikko.html
+++ b/line/tobu_nikko.html
@@ -95,8 +95,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_6ed6cd31d79a4e16bcd4661a73e30a71~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_6ed6cd31d79a4e16bcd4661a73e30a71~mv2.png" alt="東武日光駅">
-          <p>東武日光駅 【未収録】</p>
-          <!-- <a href="../station/tobu_nikko.html"></a> -->
+          <p>東武日光駅</p>
+          <a href="../station/tobu_nikko.html"></a>
         </div>
       </div>
   </div>
