--- a/line/tobu_kinugawa.html
+++ b/line/tobu_kinugawa.html
@@ -55,8 +55,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_3ba5cc1d510f473cbcc357be98472416~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_3ba5cc1d510f473cbcc357be98472416~mv2.png" alt="鬼怒川温泉駅">
-          <p>鬼怒川温泉駅 【未収録】</p>
-          <!-- <a href="../station/kinugawaonsen.html"></a> -->
+          <p>鬼怒川温泉駅</p>
+          <a href="../station/kinugawaonsen.html"></a>
         </div>
         <div class="column">
           <!-- <img src="https://static.wixstatic.com/media/0acb38_6ed6cd31d79a4e16bcd4661a73e30a71~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_6ed6cd31d79a4e16bcd4661a73e30a71~mv2.png" alt="東武日光駅"> -->
