--- a/station/nagareyamaotakanomori.html
+++ b/station/nagareyamaotakanomori.html
@@ -44,7 +44,7 @@
             <h2>1番線 -東武アーバンパークライン上り</h2>
             <p>Spring Rain</p>
           </div>
-          <a href="../platform/tobu_nikko_1.html"></a>
+          <a href="../platform/nagareyamaotakanomori_1.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_215a708c77ad4ebf80a08d27f5ed8cf3~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_215a708c77ad4ebf80a08d27f5ed8cf3~mv2.png" alt="流山おおたかの森駅">
@@ -52,7 +52,7 @@
             <h2>2番線 -東武アーバンパークライン下り</h2>
             <p>Chathedral</p>
           </div>
-          <a href="../platform/tobu_nikko_2.html"></a>
+          <a href="../platform/nagareyamaotakanomori_2.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_a1459469045c4de885309213031b2290~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_a1459469045c4de885309213031b2290~mv2.png" alt="流山おおたかの森駅">
